force-app/main/default/objects/Service__c/fields/Facility_Admission_Date__c.field-meta.xml
<CustomField>
    <fullName>Facility_Admission_Date__c</fullName>
    <label>Facility Admission Date</label>
    <type>Date</type>
</CustomField>