force-app/main/default/objects/Service__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Patient__c</referenceTo>
    <relationshipLabel>Service</relationshipLabel>
    <relationshipName>Service</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>