force-app/main/default/objects/Service__c/fields/Telehealth_Visit__c.field-meta.xml
<CustomField>
    <fullName>Telehealth_Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Telehealth Visit</label>
    <referenceTo>Service__c</referenceTo>
    <relationshipLabel>Service</relationshipLabel>
    <relationshipName>Service</relationshipName>
    <type>Lookup</type>
</CustomField>