force-app/main/default/objects/Service__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Telehealth</fullName>
            </value>
            <value>
                <fullName>RPM</fullName>
            </value>
            <value>
                <fullName>CCM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>