force-app/main/default/objects/Service__c/validationRules/Account_or_Facility.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_or_Facility</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Account__c ) &amp;&amp; ISBLANK( Facility__c )</errorConditionFormula>
    <errorMessage>Must add an Account or Facility</errorMessage>
</ValidationRule>